Fix member image alignment: MI-CO 60%, others 20%

--- a/style.css
+++ b/style.css
@@ -315,27 +315,27 @@ nav {
 
 /* Individual adjustments based on image content */
 .member-slice:nth-child(1) {
-    background-position: center top;
+    background-position: center 20%;
 }
 
 /* Ba. 大ちゃん */
 .member-slice:nth-child(2) {
-    background-position: center top;
+    background-position: center 20%;
 }
 
 /* Gt. タッカン */
 .member-slice:nth-child(3) {
-    background-position: center 80%;
+    background-position: center 60%;
 }
 
 /* Vo. MI-CO */
 .member-slice:nth-child(4) {
-    background-position: center top;
+    background-position: center 20%;
 }
 
 /* Gt. TAKUMI */
 .member-slice:nth-child(5) {
-    background-position: center top;
+    background-position: center 25%;
 }
 
 /* Ds. 福村 */
